MGS-7910 Upgrade to brXM 16.4.1
This commit includes overrides for new buttons added in 16.3.0 to show
publishing requests. These cause CPU spikes and slowness on CMS hosts, so they
are removed via this override.